# neon

./: .gitignore  CMakeLists.txt  Makefile  README.md  application.go  demo.c  dev.sh  go.mod  main.go  notes.md  raytracer.comp  raytracer.go  renderer.go  shader_utils.go  text_renderer.go
assets/shaders/: dither.fs  raytracer.comp  vertex.glsl
opengl-hello/: main.go
src/: main.c  main.cpp
src/player/: camera.c  input.c  local_player.c  player.h
src/renderer/: renderer.c  renderer.h
src/shaders/: shaders.c  shaders.h
src/ui/: ui.c  ui.h
src/world/: world.c  world.h
